--- a/static/css/reviews.css
+++ b/static/css/reviews.css
@@ -86,4 +86,5 @@ h4 {
 
 .review-img {
   max-width: 20%;
+  max-height: 15vh;
 }
